--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,5 +1,6 @@
 pandoc: '3.4'
 pkgdown: 2.1.1
 pkgdown_sha: ~
-articles: {}
-last_built: 2025-10-24T08:01Z
+articles:
+  overview: overview.html
+last_built: 2025-10-28T11:35Z
