--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: assignment4shinykkapoor
+Package: CovidRiskExplorer
 Title: Quarantine Breach Risk Explorer for ETC5523
 Version: 0.0.0.9000
 Authors@R: person("Kunal", "Kapoor", email = "kkap011@student.monash.edu", role = c("aut", "cre"))
