--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,4 @@
 
 export(get_covid_data)
 export(run_app)
-importFrom(plotly,ggplotly)
-importFrom(plotly,renderPlotly)
-importFrom(shiny,runApp)
+import(shiny)
